Add div with title.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <div class="container">
         <h4>Introduction</h4>
     </div>
+    <div>
+        <h4>First commit in this branch</h4>
+    </div>
 </body>
 </html>
