Add canvas and control panel.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     </div>
     <div>
         <h4>First commit in this branch</h4>
+        <canvas id="canvas"></canvas>
+        <div class = "controlPanel"></div>
+        <div>
+            <h4>Comments</h4>
+        </div>
     </div>
 </body>
 </html>
